update ToolManDHTML-0.2.zip download links to GitHub uploads

--- a/dragging.html
+++ b/dragging.html
@@ -134,7 +134,7 @@ window.onload = function() {
 <div class="sidebar">
 	<p><b>Download</b></p>
 	
-	<p><a href="ToolManDHTML-0.2.zip">Version 0.2</a>&nbsp;&nbsp;(<a href="LICENSE.txt">license</a>)</p>
+	<p><a href="https://github.com/downloads/toolbear/ToolManDHTML/ToolManDHTML-0.2.zip">Version 0.2</a>&nbsp;&nbsp;(<a href="LICENSE.txt">license</a>)</p>
 </div>
 
 <div>
