--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ b.updated {
 <div class="sidebar">
 	<p><b>Download</b></p>
 	
-	<p><a href="ToolManDHTML-0.2.zip">Version 0.2</a>&nbsp;&nbsp;(<a href="LICENSE.txt">license</a>)</p>
+	<p><a href="https://github.com/downloads/toolbear/ToolManDHTML/ToolManDHTML-0.2.zip">Version 0.2</a>&nbsp;&nbsp;(<a href="LICENSE.txt">license</a>)</p>
 </div>
 
 <div class="sidebar">
@@ -63,7 +63,7 @@ this?"</i> as opposed to the interaction design question <i>"Should I do this?"<
 
 <p>Most of the JavaScript has been bundled into a reusable
 package called the <b>ToolMan DHTML Library</b> which you can 
-<a href="ToolManDHTML-0.2.zip">download</a> and <a href="LICENSE.txt">use
+<a href="https://github.com/toolbear/ToolManDHTML/downloads">download</a> and <a href="LICENSE.txt">use
 for free</a>.</p>
 
 <h2>Examples</h2>
