--- a/sorting.html
+++ b/sorting.html
@@ -164,7 +164,7 @@
 <div class="sidebar">
 	<p><b>Download</b></p>
 	
-	<p><a href="ToolManDHTML-0.2.zip">Version 0.2</a>&nbsp;&nbsp;(<a href="LICENSE.txt">license</a>)</p>
+	<p><a href="https://github.com/downloads/toolbear/ToolManDHTML/ToolManDHTML-0.2.zip">Version 0.2</a>&nbsp;&nbsp;(<a href="LICENSE.txt">license</a>)</p>
 </div>
 
 <p>In Web applications I've seen numerous &#8212; and personally implemented 
