--- a/toolbars.html
+++ b/toolbars.html
@@ -77,7 +77,7 @@ function speak(id, what) {
 <div class="sidebar">
 	<p><b>Download</b></p>
 	
-	<p><a href="ToolManDHTML-0.2.zip">Version 0.2</a>&nbsp;&nbsp;(<a href="LICENSE.txt">license</a>)</p>
+	<p><a href="https://github.com/downloads/toolbear/ToolManDHTML/ToolManDHTML-0.2.zip">Version 0.2</a>&nbsp;&nbsp;(<a href="LICENSE.txt">license</a>)</p>
 </div>
 
 <div class="sidebar">
