--- a/examples/edit-in-place.html
+++ b/examples/edit-in-place.html
@@ -350,7 +350,7 @@ function join(name, isDoubleClick) {
 <div class="sidebar">
 	<p><b>Download</b></p>
 	
-	<p><a href="ToolManDHTML-0.2.zip">Version 0.2</a>&nbsp;&nbsp;(<a href="LICENSE.txt">license</a>)</p>
+	<p><a href="https://github.com/downloads/toolbear/ToolManDHTML/ToolManDHTML-0.2.zip">Version 0.2</a>&nbsp;&nbsp;(<a href="LICENSE.txt">license</a>)</p>
 </div>
 
 <div class="sidebar">
