switch JavaScript sources to pull from project repo

--- a/toolbars.html
+++ b/toolbars.html
@@ -25,12 +25,12 @@
 	}
 </style>
 
-<script language="JavaScript" type="text/javascript" src="../source/org/tool-man/core.js"></script>
-<script language="JavaScript" type="text/javascript" src="../source/org/tool-man/events.js"></script>
-<script language="JavaScript" type="text/javascript" src="../source/org/tool-man/css.js"></script>
-<script language="JavaScript" type="text/javascript" src="../source/org/tool-man/coordinates.js"></script>
-<script language="JavaScript" type="text/javascript" src="../source/org/tool-man/drag.js"></script>
-<script language="JavaScript" type="text/javascript" src="../source/org/tool-man/dragsort.js"></script>
+<script language="JavaScript" type="text/javascript" src="https://raw.github.com/toolbear/ToolManDHTML/ced12033d09a39dd8cc77d50b75c12cc4ce821da/source/org/tool-man/core.js"></script>
+<script language="JavaScript" type="text/javascript" src="https://raw.github.com/toolbear/ToolManDHTML/ced12033d09a39dd8cc77d50b75c12cc4ce821da/source/org/tool-man/events.js"></script>
+<script language="JavaScript" type="text/javascript" src="https://raw.github.com/toolbear/ToolManDHTML/ced12033d09a39dd8cc77d50b75c12cc4ce821da/source/org/tool-man/css.js"></script>
+<script language="JavaScript" type="text/javascript" src="https://raw.github.com/toolbear/ToolManDHTML/ced12033d09a39dd8cc77d50b75c12cc4ce821da/source/org/tool-man/coordinates.js"></script>
+<script language="JavaScript" type="text/javascript" src="https://raw.github.com/toolbear/ToolManDHTML/ced12033d09a39dd8cc77d50b75c12cc4ce821da/source/org/tool-man/drag.js"></script>
+<script language="JavaScript" type="text/javascript" src="https://raw.github.com/toolbear/ToolManDHTML/ced12033d09a39dd8cc77d50b75c12cc4ce821da/source/org/tool-man/dragsort.js"></script>
 
 <script language="JavaScript"><!--
 var dragsort = ToolMan.dragsort()
