Tim Taylor Consulting → Tim Taylor

--- a/examples/edit-in-place.html
+++ b/examples/edit-in-place.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN">
-<!-- Copyright (c) 2005 Tim Taylor Consulting (see LICENSE.txt) -->
+<!-- Copyright (c) 2005 Tim Taylor (see LICENSE.txt) -->
 <html lang="en-US">
 <head>
 <title>Edit in Place with JavaScript and CSS</title>
@@ -658,7 +658,7 @@ nice direct manipulation for managing a list of labels.</p>
   <li><a href="./index.html">Other Examples</a></li>
 </ul>
 
-<div id="copyright">Copyright &copy; 2005 Tim Taylor Consulting
+<div id="copyright">Copyright &copy; 2005 Tim Taylor
 (<a href="LICENSE.txt">license</a>)</div>
 
 <script type="text/javascript">
