--- a/examples/toolbars.html
+++ b/examples/toolbars.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN">
-<!-- Copyright (c) 2005 Tim Taylor Consulting (see LICENSE.txt) -->
+<!-- Copyright (c) 2005 Tim Taylor (see LICENSE.txt) -->
 <html>
 <head>
 <title>Toolbars</title>
@@ -138,7 +138,7 @@ vertical toolbar.  Different CSS styles make the difference.</p>
   <li><a href="index.html">Other Examples</a></li>
 </ul>
 
-<div id="copyright">Copyright &copy; 2005 Tim Taylor Consulting
+<div id="copyright">Copyright &copy; 2005 Tim Taylor
 (<a href="LICENSE.txt">license</a>)</div>
 
 <script type="text/javascript">
