--- a/tests/org/tool-man/CoordinateTest.html
+++ b/tests/org/tool-man/CoordinateTest.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN">
-<!-- Copyright (c) 2005 Tim Taylor Consulting (see LICENSE.txt) -->
+<!-- Copyright (c) 2005 Tim Taylor (see LICENSE.txt) -->
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="../../suite.css"/>
