--- a/examples/index.html
+++ b/examples/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN">
-<!-- Copyright (c) 2005 Tim Taylor Consulting (see LICENSE.txt) -->
+<!-- Copyright (c) 2005 Tim Taylor (see LICENSE.txt) -->
 <html>
 <head>
 <title>Direct Manipulation Using JavaScript and CSS</title>
@@ -94,7 +94,7 @@ invaluable across the board.</p>
   <li class="first"><a href="http://tool-man.org/">Home</a></li>
 </ul>
 
-<div id="copyright">Copyright &copy; 2005 Tim Taylor Consulting
+<div id="copyright">Copyright &copy; 2005 Tim Taylor
 (<a href="LICENSE.txt">license</a>)</div>
 
 <script type="text/javascript">
