--- a/examples/long-sort.html
+++ b/examples/long-sort.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN">
-<!-- Copyright (c) 2005 Tim Taylor Consulting (see LICENSE.txt) -->
+<!-- Copyright (c) 2005 Tim Taylor (see LICENSE.txt) -->
 <html>
 <head>
 <title>Long List Sort</title>
@@ -65,7 +65,7 @@
   <li><a href="./index.html">Other Examples</a></li>
 </ul>
 
-<div id="copyright">Copyright &copy; 2005 Tim Taylor Consulting
+<div id="copyright">Copyright &copy; 2005 Tim Taylor
 (<a href="LICENSE.txt">license</a>)</div>
 
 <script type="text/javascript">
