--- a/examples/toolbars.html
+++ b/examples/toolbars.html
@@ -66,13 +66,11 @@ function speak(id, what) {
   <li><a href="index.html">Other Examples</a></li>
 </ul>
 
-<div class="sidebar">
-  <p><b>Dead Project</b></p>
-
-  <p>ToolManDHTML has been inactive since 2005. It isn't being maintained. I'm leaving the site up for historical purposes and for
-  anyone who still wants access to the examples and source. Thank you to everyone for your interest, compliments and support.
-  (<a href="http://blog.tool-man.org/toolman-dhtml-library-not-supported/19">article</a>)</p>
-</div>
+<p id="its-dead-tim"><b>ToolManDHTML has been inactive since 2005</b>. I've left it up
+for posterity, but
+<a href="http://blog.tool-man.org/toolman-dhtml-library-not-supported/19">I no
+longer support it</a>. You may
+<a href="https://github.com/toolbear/ToolManDHTML/">fork it</a> on GitHub.</p>
 
 <div class="sidebar">
   <p><b>Download</b></p>
