--- a/examples/dragging.html
+++ b/examples/dragging.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 
-<title>Dragging with JavaScript</title>
+<title>Dragging with JavaScript · toolbear</title>
 <link rel="stylesheet" type="text/css" href="common/common.css"/>
 <style type="text/css">
   div {
