--- a/examples/sorting.html
+++ b/examples/sorting.html
@@ -2,7 +2,7 @@
 <!-- Copyright (c) 2005 Tim Taylor (see LICENSE.txt) -->
 <html>
 <head>
-<title>Drag &amp; Drop Sortable Lists with JavaScript and CSS</title>
+<title>Drag &amp; Drop Sortable Lists with JavaScript and CSS · toolbear</title>
 <link rel="stylesheet" type="text/css" href="common/common.css"/>
 <link rel="stylesheet" type="text/css" href="common/lists.css"/>
 <style type="text/css"><!--
