--- a/examples/edit-in-place.html
+++ b/examples/edit-in-place.html
@@ -2,7 +2,7 @@
 <!-- Copyright (c) 2005 Tim Taylor (see LICENSE.txt) -->
 <html lang="en-US">
 <head>
-<title>Edit in Place with JavaScript and CSS</title>
+<title>Edit in Place with JavaScript and CSS · toolbear</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
 <link rel="stylesheet" type="text/css" href="common/common.css"/>
