--- a/examples/index.html
+++ b/examples/index.html
@@ -2,7 +2,7 @@
 <!-- Copyright (c) 2005 Tim Taylor (see LICENSE.txt) -->
 <html>
 <head>
-<title>Direct Manipulation Using JavaScript and CSS</title>
+<title>Direct Manipulation Using JavaScript and CSS · toolbear</title>
 <link rel="stylesheet" type="text/css" href="common/common.css"/>
 <style type="text/css">
 #download, #download td {
