--- a/examples/toolbars.html
+++ b/examples/toolbars.html
@@ -2,7 +2,7 @@
 <!-- Copyright (c) 2005 Tim Taylor (see LICENSE.txt) -->
 <html>
 <head>
-<title>Toolbars</title>
+<title>Toolbars · toolbear</title>
 <link rel="stylesheet" type="text/css" href="common/common.css"/>
 <link rel="stylesheet" type="text/css" href="toolbar/toolbar.css"/>
 <style type="text/css">
