scheme relative links

--- a/examples/long-sort.html
+++ b/examples/long-sort.html
@@ -41,7 +41,7 @@
 
 <h1>Long List Sort</h1>
 <ul class="breadcrumb">
-  <li class="first"><a href="http://tool-man.org/">Home</a></li>
+  <li class="first"><a href="//tool-man.org/">Home</a></li>
   <li><a href="./index.html">Other Examples</a></li>
 </ul>
 <br class="clear"/>
@@ -61,7 +61,7 @@
 
 
 <ul class="breadcrumb">
-  <li class="first"><a href="http://tool-man.org/">Home</a></li>
+  <li class="first"><a href="//tool-man.org/">Home</a></li>
   <li><a href="./index.html">Other Examples</a></li>
 </ul>
 
