--- a/examples/dragging.html
+++ b/examples/dragging.html
@@ -118,14 +118,14 @@ window.onload = function() {
 
 <h1>Dragging with JavaScript</h1>
 <ul class="breadcrumb">
-  <li class="first"><a href="http://tool-man.org/">Home</a></li>
+  <li class="first"><a href="//tool-man.org/">Home</a></li>
   <li><a href="./index.html">Other Examples</a></li>
 </ul>
 <br class="clear"/>
 
 <p id="its-dead-tim"><b>ToolManDHTML has been inactive since 2005</b>. I've left it up
 for posterity, but
-<a href="http://blog.tool-man.org/toolman-dhtml-library-not-supported/19">I no
+<a href="//blog.tool-man.org/toolman-dhtml-library-not-supported/19">I no
 longer support it</a>. You may
 <a href="https://github.com/toolbear/ToolManDHTML/">fork it</a> on GitHub.</p>
 
@@ -239,7 +239,7 @@ the status bar.</p>
 </ul>
 
 <ul class="breadcrumb">
-  <li class="first"><a href="http://tool-man.org/">Home</a></li>
+  <li class="first"><a href="//tool-man.org/">Home</a></li>
   <li><a href="./index.html">Other Examples</a></li>
 </ul>
 
