--- a/examples/edit-in-place.html
+++ b/examples/edit-in-place.html
@@ -334,14 +334,14 @@ function join(name, isDoubleClick) {
 
 <h1>Edit in Place with JavaScript and CSS</h1>
 <ul class="breadcrumb">
-  <li class="first"><a href="http://tool-man.org/">Home</a></li>
+  <li class="first"><a href="//tool-man.org/">Home</a></li>
   <li><a href="./index.html">Other Examples</a></li>
 </ul>
 <br class="clear"/>
 
 <p id="its-dead-tim"><b>ToolManDHTML has been inactive since 2005</b>. I've left it up
 for posterity, but
-<a href="http://blog.tool-man.org/toolman-dhtml-library-not-supported/19">I no
+<a href="//blog.tool-man.org/toolman-dhtml-library-not-supported/19">I no
 longer support it</a>. You may
 <a href="https://github.com/toolbear/ToolManDHTML/">fork it</a> on GitHub.</p>
 
@@ -652,7 +652,7 @@ nice direct manipulation for managing a list of labels.</p>
 </ul>
 
 <ul class="breadcrumb">
-  <li class="first"><a href="http://tool-man.org/">Home</a></li>
+  <li class="first"><a href="//tool-man.org/">Home</a></li>
   <li><a href="./index.html">Other Examples</a></li>
 </ul>
 
