--- a/examples/index.html
+++ b/examples/index.html
@@ -26,13 +26,13 @@ b.updated {
 
 <h1>Direct Manipulation Using JavaScript and CSS</h1>
 <ul class="breadcrumb">
-  <li class="first"><a href="http://tool-man.org/">Home</a></li>
+  <li class="first"><a href="//tool-man.org/">Home</a></li>
 </ul>
 <br class="clear"/>
 
 <p id="its-dead-tim"><b>ToolManDHTML has been inactive since 2005</b>. I've left it up
 for posterity, but
-<a href="http://blog.tool-man.org/toolman-dhtml-library-not-supported/19">I no
+<a href="//blog.tool-man.org/toolman-dhtml-library-not-supported/19">I no
 longer support it</a>. You may
 <a href="https://github.com/toolbear/ToolManDHTML/">fork it</a> on GitHub.</p>
 
@@ -46,7 +46,7 @@ longer support it</a>. You may
   <p><b>26 Apr 2005 - New Version</b></p>
 
   <p>Rewritten API and updated examples released.  Includes better
-  IE support.  Read the <a href="http://blog.tool-man.org/toolman-dhtml-02-released/16">full announcement</a>.</p>
+  IE support.  Read the <a href="//blog.tool-man.org/toolman-dhtml-02-released/16">full announcement</a>.</p>
 </div>
 
 <p>Direct manipulation, particularly drag and drop, is under utilized in
@@ -89,7 +89,7 @@ ordered lists</a>.
 invaluable across the board.</p>
 
 <ul class="breadcrumb">
-  <li class="first"><a href="http://tool-man.org/">Home</a></li>
+  <li class="first"><a href="//tool-man.org/">Home</a></li>
 </ul>
 
 <div id="copyright">Copyright &copy; 2005 Tim Taylor
