--- a/examples/toolbars.html
+++ b/examples/toolbars.html
@@ -62,13 +62,13 @@ function speak(id, what) {
 
 <h1>Toolbars</h1>
 <ul class="breadcrumb">
-  <li class="first"><a href="http://tool-man.org/">Home</a></li>
+  <li class="first"><a href="//tool-man.org/">Home</a></li>
   <li><a href="index.html">Other Examples</a></li>
 </ul>
 
 <p id="its-dead-tim"><b>ToolManDHTML has been inactive since 2005</b>. I've left it up
 for posterity, but
-<a href="http://blog.tool-man.org/toolman-dhtml-library-not-supported/19">I no
+<a href="//blog.tool-man.org/toolman-dhtml-library-not-supported/19">I no
 longer support it</a>. You may
 <a href="https://github.com/toolbear/ToolManDHTML/">fork it</a> on GitHub.</p>
 
@@ -132,7 +132,7 @@ golly gee, you can rearrange the toolbar buttons...</p>
 vertical toolbar.  Different CSS styles make the difference.</p>
 
 <ul class="breadcrumb">
-  <li class="first"><a href="http://tool-man.org/">Home</a></li>
+  <li class="first"><a href="//tool-man.org/">Home</a></li>
   <li><a href="index.html">Other Examples</a></li>
 </ul>
 
